--- a/Tutoring/Tutoring.csproj
+++ b/Tutoring/Tutoring.csproj
@@ -46,7 +46,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EducationType.cs" />
-    <Compile Include="Examples\Example.cs" />
     <Compile Include="Examples\Node.cs" />
     <Compile Include="Examples\Numbers.cs" />
     <Compile Include="Examples\Transport.cs" />
@@ -57,6 +56,7 @@
     <Compile Include="Practice.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tasks\Example.cs" />
     <Compile Include="User.cs" />
     <Compile Include="UserHandler.cs" />
   </ItemGroup>
